--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,3 +9,17 @@ build-backend = "setuptools.build_meta"
 [tool.setuptools_scm]
 write_to = "hggit/__version__.py"
 version_scheme = "release-branch-semver"
+
+[tool.black]
+line-length = 80
+exclude = '''
+build/
+| wheelhouse/
+| dist/
+| packages/
+| \.hg/
+| \.mypy_cache/
+| \.venv/
+| tests/
+'''
+skip-string-normalization = true
