ci: make errors with default and stable fail scheduled builds
This will trigger a nice failure notification.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -98,7 +98,15 @@ Ubuntu:
 Development:
   extends: .base
   stage: upcoming
-  allow_failure: true
+  rules:
+    # we don't want to prevent merging unrelated work, so allow
+    # failures for normal builds
+    - if: '$CI_PIPELINE_SOURCE != "schedule"'
+      allow_failure: true
+    # but disallow them for scheduled builds, so we get a nice
+    # notification
+    - if: '$CI_PIPELINE_SOURCE == "schedule"'
+      allow_failure: false
   parallel:
     matrix:
       - PYTHON:
