setup: use setup.cfg & setuptools_scm

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,3 +1,25 @@
+[metadata]
+name = hg-git
+author = Scott Chacon, Augie Fackler, Kevin Bullock and others
+maintainer = The hg-git maintainers
+maintainer_email = hg-git@googlegroups.com
+url = http://foss.heptapod.net/mercurial/hg-git
+description = push to and pull from a Git repository using Mercurial
+long_description = file:README.rst
+keywords = hg git mercurial
+license = GPLv2
+
+[options]
+include_package_data=True
+zip_safe=False
+python_requires = >=3.6
+packages = hggit
+install_requires=
+    dulwich>=0.19.3
+
+[options.package_data]
+* = *.txt, *.rst
+
 [flake8]
 # E,W will ignore all pep8
 ignore=E129
