ci: consolidate matrices

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -29,7 +29,8 @@ Latest:
   stage: current
   parallel:
     matrix:
-      - PYTHON:
+      - &latest-versions
+        PYTHON:
           - "2.7"
           - "3.5"
           - "3.9"
@@ -51,7 +52,8 @@ Supported:
   retry: 1
   parallel:
     matrix:
-      - PYTHON: "2.7"
+      - &supported-versions-py2
+        PYTHON: "2.7"
         HG:
           - "4.4"
           - "4.5"
@@ -67,7 +69,8 @@ Supported:
           - "5.5"
           - "5.6"
           - "5.7"
-      - PYTHON: "3.9"
+      - &supported-versions-py3
+        PYTHON: "3.9"
         HG:
           - "5.2"
           - "5.3"
@@ -113,7 +116,8 @@ Development:
       allow_failure: false
   parallel:
     matrix:
-      - PYTHON:
+      - &development-versions
+        PYTHON:
           - "2.7"
           - "3.9"
         HG:
@@ -122,7 +126,7 @@ Development:
 
 # Build images for the above tasks; this should be a scheduled job, as
 # it is quite unnecessary to run on every invocation.
-Release images:
+CI images:
   stage: images
   tags:
     - container-registry-push
@@ -154,45 +158,10 @@ Release images:
       --destination registry.heptapod.net:443/mercurial/hg-git/ci:py$PYTHON-hg-$HG
   parallel:
     matrix:
-      - PYTHON:
-          - "2.7"
-        HG:
-          - "4.4"
-          - "4.5"
-          - "4.6"
-          - "4.7"
-          - "4.8"
-          - "4.9"
-          - "5.0"
-          - "5.1"
-      - PYTHON:
-          - "2.7"
-          - "3.9"
-        HG:
-          - "5.2"
-          - "5.3"
-          - "5.4"
-          - "5.5"
-          - "5.6"
-          - "5.7"
-      - PYTHON:
-          - "2.7"
-          - "3.5"
-          - "3.9"
-        HG:
-          - "5.8"
-
-# Build branch images; factored out so it may be invoked separately
-Current images:
-  extends: Release images
-  parallel:
-    matrix:
-      - PYTHON:
-          - "2.7"
-          - "3.9"
-        HG:
-          - "default"
-          - "stable"
+      - *latest-versions
+      - *supported-versions-py2
+      - *supported-versions-py3
+      - *development-versions
 
 # Builds the image used by tests/test-networking.t
 Git service image:
