ci: avoid duplicate builds
See:

https://foss.heptapod.net/help/ci/yaml/README.md#switch-between-branch-pipelines-and-merge-request-pipelines

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -85,7 +85,7 @@ Development:
   rules:
     # we don't want to prevent merging unrelated work, so allow
     # failures for normal builds
-    - if: '$CI_PIPELINE_SOURCE != "schedule"'
+    - if: '$CI_COMMIT_BRANCH'
       allow_failure: true
     # but disallow them for scheduled builds, so we get a nice
     # notification
