--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -232,8 +232,13 @@ x86 Wheels:
   image: quay.io/pypa/${PLATFORM}
   timeout: 15m
   stage: archives
-  only:
-    - tags
+  rules:
+    # run on tags
+    - if: $CI_COMMIT_TAG
+    # run on protected references
+    - if: '$CI_COMMIT_REF_PROTECTED == "true"'
+    # and when explicitly requested
+    - if: '$CI_BUILD_ARCHIVES == "1"'
   variables:
     PYPI_REPOSITORY: ${CI_API_V4_URL}/projects/${CI_PROJECT_ID}/packages/pypi
   script:
