--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,7 +6,7 @@ stages:
   - archives
 
 .base:
-  image: registry.heptapod.net:443/mercurial/hg-git/ci:py$PYTHON-hg-$HG
+  image: registry.heptapod.net:443/mercurial/hg-git/ci/$CI_COMMIT_HG_BRANCH:hg-$HG-py$PYTHON
   timeout: 10m
   services:
       - name: registry.heptapod.net:443/mercurial/hg-git/git-server
@@ -159,7 +159,7 @@ CI images:
       --build-arg HG=$HG
       --single-snapshot
       --cleanup
-      --destination registry.heptapod.net:443/mercurial/hg-git/ci:py$PYTHON-hg-$HG
+      --destination registry.heptapod.net:443/mercurial/hg-git/ci/$CI_COMMIT_HG_BRANCH:hg-$HG-py$PYTHON
   parallel:
     matrix:
       - *latest-versions
