--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -76,8 +76,9 @@ Ubuntu:
       - >
         DEBIAN_FRONTEND=noninteractive
         apt-get -qq install --no-install-recommends
-        gnupg gnupg-agent git unzip ssh
-        mercurial python3-dulwich python3-setuptools pyflakes3
+        gnupg gnupg-agent git unzip ssh mercurial
+        python3-pygments python3-coverage python3-dulwich python3-setuptools
+        pyflakes3
       - >
         python3 tests/run-tests.py -v
         --xunit $PWD/tests-ubuntu.xml --color=always --timeout 300
