ci: allow the ubuntu test to fail
For some odd reason, this is currently broken, and fetching packages
results in 404 errors. I think they changed some server somewhere?

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -91,6 +91,7 @@ Supported:
 Ubuntu:
     stage: compat
     image: ubuntu:20.10
+    allow_failure: true
     script:
       - apt-get -qq update
       - >
