coverage: ignore uninteresting lines

--- a/setup.cfg
+++ b/setup.cfg
@@ -24,3 +24,7 @@ install_requires=
 # E,W will ignore all pep8
 ignore=E129
 exclude=./tests,./contrib/
+
+[coverage:report]
+exclude_lines =
+    raise NotImplementedError
