--- a/setup.cfg
+++ b/setup.cfg
@@ -26,5 +26,8 @@ ignore=E129
 exclude=./tests,./contrib/
 
 [coverage:report]
+precision = 1
+include =
+    hggit/*
 exclude_lines =
     raise NotImplementedError
