--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -87,8 +87,10 @@ Ubuntu:
         DEBIAN_FRONTEND=noninteractive
         apt-get -qq install --no-install-recommends
         gnupg gnupg-agent git unzip ssh mercurial
-        python3-pygments python3-coverage python3-dulwich python3-setuptools
+        python3-pygments python3-pip python3-dulwich python3-setuptools
         pyflakes3
+      # get latest coverage, otherwise it might not be compatible
+      - pip install coverage
       - useradd test
       - chown -R test *
       - >
