README: make twine happy
The recent release failed to upload due to invalid ReStructured Text.
Oops. While at it, I fixed another warning about a missing content
type declaration.

--- a/setup.cfg
+++ b/setup.cfg
@@ -6,6 +6,7 @@ maintainer_email = hg-git@googlegroups.com
 url = http://foss.heptapod.net/mercurial/hg-git
 description = push to and pull from a Git repository using Mercurial
 long_description = file:README.rst
+long_description_content_type = text/x-rst
 keywords = hg git mercurial
 license = GPLv2
 
