--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -277,12 +277,13 @@ Wheels:
       password = ${CI_JOB_TOKEN}
       EOF
     - pip install mercurial twine build
+    - >-
+      test -n "${CI_COMMIT_TAG}" &&
+      export SETUPTOOLS_SCM_PRETEND_VERSION="${CI_COMMIT_TAG}"
     - pyproject-build
-    - |
-      twine upload \
-        --disable-progress-bar --verbose --skip-existing \
-        --repository gitlab \
-        dist/*
+    - >-
+      twine upload --disable-progress-bar --verbose --skip-existing
+      --repository gitlab dist/*
   artifacts:
     paths:
       - wheelhouse
